--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'base/breakpoints';
 @import 'base/components';
 @import 'base/mixin';
+@import 'base/slider';
 
 @import 'layouts/header';
 @import 'layouts/hero';
