--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -40,7 +40,7 @@
     }
 }
 
-// *****hamburger-menu*******
+/* *****hamburger-menu******* */
 
 @media screen and (max-width: $brekpoint-mobile) {
 
@@ -107,7 +107,7 @@
     }
 }
 
-// *****hamburger-menu end*******
+/* *****hamburger-menu end******* */
 
 .visually-hidden {
     position: absolute;
