work with slider

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ input {
  * @license MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
  * @tutorial https://itchief.ru/javascript/slider
  */
-@media screen and (max-width: 1199px) {
+@media (min-width: 600px) and (max-width: 1199px) {
   .itc-slider {
     position: relative;
   }
@@ -364,7 +364,7 @@ input {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   }
 }
-@media (min-width: 1200px) {
+@media (max-width) {
   .itc-slider-btn {
     display: none;
   }
