--- a/sass/base/_breakpoints.scss
+++ b/sass/base/_breakpoints.scss
@@ -1,4 +1,4 @@
-$brekpoint-mobile: 599px;
+$breakpoint-mobile: 599px;
 $breakpoint-tablet-portrait: 600px;
 $breakpoint-tablet-landscape: 900px;
 $breakpoint-desktop: 1200px;
