refactor: fix slide adaptive

--- a/sass/base/_slider.scss
+++ b/sass/base/_slider.scss
@@ -7,7 +7,17 @@
  * @tutorial https://itchief.ru/javascript/slider
  */
 
- @media screen and (max-width: calc($breakpoint-desktop - 1px)) {
+ @media screen and (max-width: $breakpoint-mobile) {
+    .itc-slider-btn {
+        display: none;
+    }
+
+    .itc-slider-item {
+        transform: translate3d(0, 0, 0) !important;
+    }
+ }
+
+ @media (min-width: $breakpoint-tablet-portrait) and (max-width: calc($breakpoint-desktop - 1px)) {
 
  .itc-slider {
     position: relative;
@@ -20,7 +30,7 @@
   
   .itc-slider-items {
     display: flex;
-    transition: transform 500ms ease;
+    transition: transform 0.5s ease;
     will-change: transform;
   }
   
@@ -42,17 +52,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     color: #fff;
     text-align: center;
-    background: $clr-bg-opacity;
+    background: rgb(0 0 0 / 20%);
     border: none;
     border-radius: 50%;
     transform: translateY(-50%);
     cursor: pointer;
   }
-
+  
+  .itc-slider-btn-hide {
+    display: none;
+  }
+  
   .itc-slider-btn-prev {
     left: 0;
   }
@@ -85,4 +99,47 @@
   .itc-slider-btn-next::before {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   }
+  
+  /* индикаторы */
+  .itc-slider-indicators {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: flex;
+    justify-content: center;
+    margin: 0 15%;
+    padding-left: 0;
+    list-style: none;
+  }
+  
+  .itc-slider-indicator {
+    flex: 0 1 auto;
+    box-sizing: content-box;
+    width: 30px;
+    height: 5px;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: -999px;
+    background-color: rgb(255 255 255 / 50%);
+    background-clip: padding-box;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    cursor: pointer;
+  }
+  
+  .itc-slider-indicator-active {
+    background-color: rgb(255 255 255 / 90%);
+  }
 }
+
+@media (min-width: $breakpoint-desktop) {
+    .itc-slider-btn {
+        display: none;
+    }
+
+    .itc-slider-item {
+        transform: translate3d(0, 0, 0) !important;
+    }
+ }
