--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -42,7 +42,7 @@
 
 /* *****hamburger-menu******* */
 
-@media screen and (max-width: $brekpoint-mobile) {
+@media screen and (max-width: $breakpoint-mobile) {
 
     .hamburger-menu-toggle {
         position: absolute;
