--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,14 @@ input {
  * @license MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
  * @tutorial https://itchief.ru/javascript/slider
  */
+@media screen and (max-width: 599px) {
+  .itc-slider-btn {
+    display: none;
+  }
+  .itc-slider-item {
+    transform: translate3d(0, 0, 0) !important;
+  }
+}
 @media (min-width: 600px) and (max-width: 1199px) {
   .itc-slider {
     position: relative;
@@ -305,7 +313,7 @@ input {
   }
   .itc-slider-items {
     display: flex;
-    transition: transform 500ms ease;
+    transition: transform 0.5s ease;
     will-change: transform;
   }
   .itc-slider-transition-none {
@@ -326,15 +334,18 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     color: #fff;
     text-align: center;
-    background: rgba(52, 57, 66, 0.85);
+    background: rgba(0, 0, 0, 0.2);
     border: none;
     border-radius: 50%;
     transform: translateY(-50%);
     cursor: pointer;
+  }
+  .itc-slider-btn-hide {
+    display: none;
   }
   .itc-slider-btn-prev {
     left: 0;
@@ -363,8 +374,38 @@ input {
   .itc-slider-btn-next::before {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   }
+  /* индикаторы */
+  .itc-slider-indicators {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: flex;
+    justify-content: center;
+    margin: 0 15%;
+    padding-left: 0;
+    list-style: none;
+  }
+  .itc-slider-indicator {
+    flex: 0 1 auto;
+    box-sizing: content-box;
+    width: 30px;
+    height: 5px;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: -999px;
+    background-color: rgba(255, 255, 255, 0.5);
+    background-clip: padding-box;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    cursor: pointer;
+  }
+  .itc-slider-indicator-active {
+    background-color: rgba(255, 255, 255, 0.9);
+  }
 }
-@media (max-width) {
+@media (min-width: 1200px) {
   .itc-slider-btn {
     display: none;
   }
