--- a/sass/layouts/_testimonial.scss
+++ b/sass/layouts/_testimonial.scss
@@ -7,10 +7,16 @@
         background-color: $clr-secondary;
     }
 
+    &__block {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
     &__card {
-        padding: 1em;
+        flex-basis: 100%;
+        padding: 2em 1em;
         background-color: $clr-bg-opacity;
-        margin-bottom: 2em;
+        margin: 0 auto;
     }
 
     &__img {
@@ -20,6 +26,56 @@
         background-position: center top;
         background-repeat: no-repeat;
         height: calc(300px + 10vw);
+    }
+
+    &__btns>button {
+        background: transparent;
+        border-color: transparent;
+        font-size: 1.2rem;
+        cursor: pointer;
+        margin: 0 0.25rem;
+        text-transform: capitalize;
+        letter-spacing: 2px;
+        color: $clr-white;
+        transition: all 200ms ease-in-out;
+
+        &:hover {
+            color: $clr-primary;
+        }
+    }
+
+    @media screen and (max-width: ($breakpoint-tablet-landscape - 1px)) {
+        &__block {
+            position: relative;
+            overflow: hidden;
+            width: 90%;
+            height: 55vh;
+            margin: 0 auto 2rem;
+        }
+
+        &__card {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        &__btns {
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+    }
+
+
+    @media screen and (min-width: $breakpoint-tablet-landscape) {
+        &__block {
+            @include flex(row, space-between, stretch);
+            gap: 1em;
+            margin-bottom: 2rem;
+        }
+
+        &__btns {
+            display: none;
+        }
     }
 
     @media screen and (min-width: $breakpoint-desktop) {
